<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container">

    <TextView
        android:id="@+id/disclaimer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/submit_preset_confirm_desc"
        android:textAppearance="?textAppearanceBodyMedium"
        android:layout_marginHorizontal="@dimen/padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/positive_button"/>

    <Button
        android:id="@+id/positive_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/submit_preset"
        android:layout_marginHorizontal="@dimen/padding"
        android:layout_marginBottom="@dimen/padding_half"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/negative_button"/>

    <Button
        android:id="@+id/negative_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_back"
        android:layout_marginHorizontal="@dimen/padding"
        android:layout_marginBottom="@dimen/padding"
        style="?materialButtonOutlinedStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.idunnololz.summit.view.LoadingView
        android:id="@+id/loading_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>